<resources>
    <string-array name="position_array">
        <item>Volunteer Co-ordinator</item>
        <item>Volunteer Medic</item>
        <item>Child Protection worker</item>
        <item>Lawyer / Advocacy Support</item>
        <item>Social Worker</item>
        <item>Translator</item>
        <item>Labourer</item>
        <item>Kitchen Staff/ Cook</item>
        <item>Aid Distribution \n Team Member</item>
        <item>Manager/Supervisor</item>
    </string-array>
    <string-array name="sector_array">
        <item>Refugee Camp</item>
        <item>Head Office</item>
    </string-array>
    <string name="app_name">BedunFamily</string>
    <string name="app_title">Bedun Family</string>
    <string name="next">Next</string>
    <string name="search_step_2_inst">Please enter the details of your missing family member. The more detail you enter, the more likely we are to find a match."</string>
    <string name="add_ref_ins">Please enter the details of the refugee you are working with. Please be aware that other users will be able to search for this individual, so details should be recorded as accurately as possible"</string>
    <string name="voice_inst">"Record a 30 second personal voice message on the next screen, to send to the match."</string>
    <string name="voicemail">" Voice Message"</string>
    <string name="voice_final_ins">"Your Voice Message was sent. Please wait up to 28 days before contacting an Aid Organization. In the meantime, please continue to use the search function to locate your family member"</string>
    <string name="add_family_member_title"> Add Family Member</string>
    <string name="instructions"><u>Instructions</u></string>
    <string-array name="aid_org_array_array">
        <item>MSF</item>
        <item>Red Cross / Red Crescent</item>
        <item>Help4Refugees</item>
        <item>UNHCR</item>
        <item>Unicef</item>
    </string-array>
    <string-array name="age_group_array">
        <item>Under 16</item>
        <item>16–19</item>
        <item>20–25</item>
        <item>26–31</item>
        <item>32–40</item>
        <item>41–50</item>
        <item>51–60</item>
        <item>60+</item>
    </string-array>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="family_array">
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Aunt</item>
        <item>Uncle</item>
        <item>Niece</item>
        <item>Nephew</item>
        <item>Cousin</item>
        <item>Grandfather</item>
        <item>Grandmother</item>
        <item>Grandson</item>
        <item>Granddaughter</item>
        <item>Daughter</item>
        <item>Son</item>
    </string-array>
    <string name="registration_title">Registration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="AmericanSamoa"> American Samoa </string>
    <string name="Andorra">Andorra</string>
    <string name="Angola">Angola</string>
    <string name="Anguilla">Anguilla</string>
    <string name="AntiguaandBarbuda">Antigua and Barbuda</string>
    <string name="Argentina">Argentina</string>
    <string name="Armenia">Armenia</string>
    <string name="Aruba">Aruba</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Barbados">Barbados</string>
    <string name="Belarus">Belarus</string>
    <string name="Belgium">Belgium</string>
    <string name="Belize">Belize</string>
    <string name="Benin">Benin</string>
    <string name="Bermuda">Bermuda</string>
    <string name="Bhutan">Bhutan</string>
    <string name="Bolivia">Bolivia</string>
    <string name="BosniaandHerzegovina">Bosnia and Herzegovina</string>
    <string name="Botswana">Botswana</string>
    <string name="Brazil">Brazil</string>
    <string name="BritishIndianOceanTerritory">British Indian Territory</string>
    <string name="BritishVirginIslands">British Virgin Islands</string>
    <string name="Brunei">Brunei</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="BurkinaFaso">Burkina Faso</string>
    <string name="Burundi">Burundi</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Canada">Canada</string>
    <string name="CapeVerde">CapeVerde</string>
    <string name="CaribbeanNetherlands">Caribbean Netherlands</string>
    <string name="CaymanIslands">Cayman Islands</string>
    <string name="CentralAfricanRepublic">CentralAfricanRepublic</string>
    <string name="Chad">Chad</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="ChristmasIsland">ChristmasIsland</string>
    <string name="CocosKeelingIslands"> Cocos (Keeling) Islands </string>
    <string name="Colombia">Colombia</string>
    <string name="Comoros">Comoros</string>
    <string name="DemocraticRepublicofCongo">Democratic Republic of Congo</string>
    <string name="RepublicOfCongo">Republic Of Congo</string>
    <string name="CookIslands">Cook Islands</string>
    <string name="CostaRica">Costa Rica</string>
    <string name="CotedIvoire">Côte d’Ivoire</string>
    <string name="Croatia">Croatia</string>
    <string name="Cuba">Cuba</string>
    <string name="Curacao">Curaçao</string>
    <string name="Cyprus">Cyprus</string>
    <string name="CzechRepublic">Czech Republic</string>
    <string name="Denmark">Denmark</string>
    <string name="Djibouti">Djibouti</string>
    <string name="Dominica">Dominica</string>
    <string name="DominicanRepublic">Dominican Republic</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Egypt">Egypt</string>
    <string name="ElSalvador">El Salvador</string>
    <string name="EquatorialGuinea">Equatorial Guinea</string>
    <string name="Estonia">Estonia</string>
    <string name="Eritrea">Eritrea</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="FalklandIslands">Falkland Islands</string>
    <string name="FaroeIslands">Faroe Islands</string>
    <string name="Fiji">Fiji</string>
    <string name="Finland">Finland</string>
    <string name="France">France</string>
    <string name="FrenchGuiana">French Guiana</string>
    <string name="FrenchPolynesia">French Polynesia</string>
    <string name="Gabon">Gabon</string>
    <string name="Gambia">Gambia</string>
    <string name="Georgia">Georgia</string>
    <string name="Germany">Germany</string>
    <string name="Ghana">Ghana</string>
    <string name="Gibraltar">Gibraltar</string>
    <string name="Greece">Greece</string>
    <string name="Greenland">Greenland</string>
    <string name="Grenada">Grenada</string>
    <string name="Guadeloupe">Guadeloupe</string>
    <string name="Guam">Guam</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Guernsey">Guernsey</string>
    <string name="Guinea">Guinea</string>
    <string name="GuineaBissau">Guinea-Bissau</string>
    <string name="Guyana">Guyana</string>
    <string name="Haiti">Haiti</string>
    <string name="Honduras">Honduras</string>
    <string name="HongKong">Hong Kong</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="India">India</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Iran">Iran</string>
    <string name="Iraq">Iraq</string>
    <string name="Ireland">Ireland</string>
    <string name="IsleofMan">Isle of Man</string>
    <string name="Israel">Israel</string>
    <string name="Italy">Italy</string>
    <string name="Jamaica">Jamaica</string>
    <string name="Japan">Japan</string>
    <string name="Jersey">Jersey</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="Kenya">Kenya</string>
    <string name="Kiribati">Kiribati</string>
    <string name="Kuwait">Kiribati</string>
    <string name="Kyrgyzstan">Kyrgyzstan</string>
    <string name="Laos">Laos</string>
    <string name="Latvia">Latvia</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Liberia">Liberia</string>
    <string name="Libya">Libya</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Macao">Macao</string>
    <string name="Macedonia">Macedonia</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Malawi">Malawi</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Maldives">Maldives</string>
    <string name="Mali">Mali</string>
    <string name="Malta">Malta</string>
    <string name="MarshallIslands">Marshall Islands</string>
    <string name="Martinique">Martinique</string>
    <string name="Mauritania">Mauritania</string>
    <string name="Mauritius">Mauritius</string>
    <string name="Mayotte">Mayotte</string>
    <string name="Mexico">Mexico</string>
    <string name="Micronesia">Micronesia</string>
    <string name="Moldova">Moldova</string>
    <string name="Monaco">Monaco</string>
    <string name="Montenegro">Montenegro</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Montserrat">Montserrat</string>
    <string name="Morocco">Morocco</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Myanmar">Myanmar</string>
    <string name="Namibia">Namibia</string>
    <string name="Nauru">Nauru</string>
    <string name="Nepal">Nepal</string>
    <string name="Netherlands">Netherlands</string>
    <string name="NewCaledonia">New Caledonia</string>
    <string name="NewZealand">New Zealand</string>
    <string name="Nicaragua">Nicaragua</string>
    <string name="nationality"> Nationality </string>
    <string name="date_of_birth"> "Date Of Birth" </string>
    <string name="aidOrg"> "Aid Organization" </string>
    <string name="gender_label">Gender</string>
    <string name="position_label"> Position </string>
    <string name="supervisor_label">Supervisor</string>
    <string name="work_country_label">Country of Work</string>
    <string name="sector_label">Sector</string>
    <string name="home">Home</string>
    <string name="search_fam"> Search for Family</string>
    <string name="request_ver">Request Verification</string>
    <string name="select_ref"> Select Refugee</string>
    <string name="fam_members"> Family Members</string>
    <string name="voice_message_inbox">Voice Message Inbox</string>
    <string name="voice_message_sentbox">Voice Message Sent Box</string>
    <string name="profile">Profile</string>
    <string name="your_details">Your Details</string>
    <string name="settings">Settings</string>
    <string name="proceed">Proceed</string>
    <string name="main_menu">Main Menu</string>
    <string name="current_refugee">Current Refugee</string>
    <string name="add_ref">Add Refugee</string>
    <string name="update_ref_details">Update Refugee Details</string>
    <string name="update_fam_member_details">Update Family Details</string>
    <string name="full_name">Full Name</string>
    <string name="voice_messages">Voice Messages</string>
    <string name="select_fam">Select Family Member</string>
    <string name="contact_organisation">Contact Organisation</string>
    <string name="contact_org_done">Your Details Have Been Sent to an Aid Organisation. Please wait for Further Contact.</string>
</resources>