<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_9sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gb.globalfamily.Registration_Refugee_Activity"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#25D3D3D3"
        android:padding="@dimen/_20sdp">

        <TextView
            android:id="@+id/step_1_description"
            android:layout_width="@dimen/_240sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ins_connect_fam"
            android:layout_marginTop="@dimen/_15sdp"
            android:lines="4"
            android:maxLines="4"
            android:text="@string/contact_org_done"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/_15ssp" />
        <Button
            android:layout_width="@dimen/_150sdp"
            android:id="@+id/button_cont_done"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/tickcont"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/step_1_description"/>

        <TextView
            android:id="@+id/ins_connect_fam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/instructions"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/_28ssp" />
    </RelativeLayout>


    <Button
        android:id="@+id/contact_button"
        android:layout_width="@dimen/_150sdp"
        android:textColorHint="#ffffff"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/main_menu"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/TitleColor"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
